@@ -1,0 +1,14 @@
+--TEST--
+Checking for custom directory INI entry (with trailing slash)
+--SKIPIF--
+<?php if (!extension_loaded("geoip")) print "skip"; ?>
+--INI--
+geoip.custom_directory="/test/"
+--FILE--
+<?php
+
+var_dump( geoip_db_filename(GEOIP_COUNTRY_EDITION) );
+
+?>
+--EXPECT--
+string(15) "/test/GeoIP.dat"
